2015-04-01  Luiz Irber  <irberlui@msu.edu>

   * third-party/smhasher/MurmurHash3.{cc,h}: remove unused code, fix warnings.

2015-04-01  Michael R. Crusoe  <mcrusoe@msu.edu>

   * Doxyfile.in: make documentation generation reproducible, removed timestamp

2015-04-01  Alex Hyer  <theonehyer@gmail.com>

   * scripts/find-knots.py: added force argument to check_file_status()
   call in main().

2015-03-31  Kevin Murray  <spam@kdmurray.id.au>

   * lib/read_parsers.{cc,hh}: add read counting to IParser and subclasses
   * khmer/_khmermodule.cc,tests/test_read_parsers.py: add 'num_reads'
   attribute to khmer.ReadParser objects in python land, and test it.

2015-03-28  Kevin Murray  <spam@kdmurray.id.au>

   * lib/hashbits.hh: Add Hashbits::n_tables() accessor

2015-03-27  Michael R. Crusoe  <mcrusoe@msu.edu>

   * lib/read_parsers.{cc,hh}: Obfuscate SeqAn SequenceStream objects with a
   wrapper struct, to avoid #include-ing the SeqAn headers.
   * lib/Makefile: Don't install the SeqAn headers.

2015-03-27  Kevin Murray  <spam@kdmurray.id.au>

   * lib/Makefile: Add libkhmer targets, clean up
   * lib/get_version.py: Rewrite to use versioneer.py
   * lib/.gitignore,third-party/.gitignore: Add more compiled outputs
   * lib/.check_openmp.cc: add source that checks compiler for openmp support.
   * lib/khmer.pc.in: add pkg-config file for khmer

2015-03-23  Kevin Murray  <spam@kdmurray.id.au>

   * lib/counting.hh: Add CountingHash::n_tables() accessor

2015-03-16  Jessica Mizzi  <mizzijes@msu.edu>

    * khmer/kfile.py: Added file not existing error for system exit
    * tests/{test_scripts,test_functions}.py: Added tests for
    check_file_status for file existence and force option

2015-03-15  Kevin Murray  <spam@kdmurray.id.au>  &  Titus Brown  <titus@idyll.org>

   * tests/test_counting_hash.py: Skip get_raw_tables test if python doesn't
   have the memoryview type/function.

2015-03-11  Erich Schwarz  <ems394@cornell.edu>
