@@ -455,13 +455,7 @@ bool HLLCounter::check_and_normalize_read(std::string &read) const
 
 void HLLCounter::merge(HLLCounter &other)
 {
-    std::transform(this->M.begin(), this->M.end(),
-                   other.M.begin(),
-                   this->M.begin(),
-                   std::max<int>);
-    /*
     for(unsigned int i=0; i < this->M.size(); ++i) {
         this->M[i] = std::max(other.M[i], this->M[i]);
     }
-    */
 }
